--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -45,6 +45,13 @@
       <artifactId>gson</artifactId>
       <version>2.8.6</version>
     </dependency>
+
+    <!-- Google Cloud Deps -->
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-secretmanager</artifactId>
+      <version>1.4.0</version>
+    </dependency>
   </dependencies>
 
   <build>
